Added description and overview in readme
Apart from readme, added backup copies to the list of ignored files.

--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,10 @@ UpgradeLog*.htm
 # Microsoft Fakes
 FakesAssemblies/
 
+# Backup copies
+*.bak
+*.orig
+
 # =========================
 # Operating System Files
 # =========================
